Added profile endpoint
